# beaverhabits

./: .clinerules  .dockerignore  .gitignore  .gitmodules  API.md  CLAUDE.md  Dockerfile  Dockerfile.buildkit.arm32  Dockerfile.nobuildkit.arm32  GEMINI.md  LICENSE  README.md  fly.sh  fly.toml  healthcheck.py  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh
.claude/: settings.local.json
.claude/hooks/: session_start.sh
.github/: copilot-instructions.md  funding.yml
.github/copilot/: commit_push.prompt.md
.github/workflows/: fly.yml  pr.yml  pre-deployment-test.yml  publish.yml  publish_fast.yml  pull_request.yml  release.yml
.user/: a66250a2-63d5-44af-b90e-953fb04a687b.json
beaverhabits/: .main.py.swp  __init__.py  accessibility.py  api.py  components.py  configs.py  const.py  demo.py  gui.py  logging.py  main.py  models.py  requirements.txt  routes.py  scheduler.py  telemetry.py  utils.py  version.py  view.py  views.py
beaverhabits/api/: __init__.py  dependencies.py  models.py
beaverhabits/api/routes/: __init__.py  export.py  habits.py  lists.py
beaverhabits/app/: app.py  auth.py  crud.py  db.py  dependencies.py  schemas.py  users.py
beaverhabits/core/: backup.py  completions.py  dependencies.py  note.py  streak_svg.py
beaverhabits/frontend/: accessibility.py  add.py  add_page.py  admin.py  cal_heatmap_page.py  change_password_page.py  chip_sets_page.py  components.py  css.py  export_page.py  habit_page.py  icons.py  import_page.py  index_page.py  intersection_observer.js  intersection_observer.py  javascript.py  layout.py  lists_page.py  menu.py  note.js  order_page.py  paddle_page.py  pricing_page.py  settings_page.py  stats_page.py  streaks.py  textarea.js  textarea.py  tokens_page.py
beaverhabits/frontend/components/: __init__.py  base.py  utils.py
beaverhabits/frontend/components/calendar/: __init__.py  heatmap.py  history.py  notes.py
beaverhabits/frontend/components/habit/: __init__.py  badges.py  buttons.py  cards.py  checkbox.py  goal.py  inputs.py  link.py  priority.py
beaverhabits/frontend/components/index/: __init__.py
beaverhabits/frontend/components/index/habit/: __init__.py  filter.py  list.py  state.py  utils.py
beaverhabits/frontend/components/index/navigation/: __init__.py  week.py
beaverhabits/frontend/components/index/url/: __init__.py  (+1 more)
beaverhabits/frontend/components/layout/: __init__.py
beaverhabits/frontend/components/utils/: __init__.py  connection_status.py  date.py  ratelimiter.py
beaverhabits/integrations/: telegram.py
beaverhabits/plan/: paddle.py  plan.py
beaverhabits/routes/: api.py  astro.py  google_one_tap.py  metrics.py  routes.py
beaverhabits/sql/: __init__.py  database.py  models.py
beaverhabits/storage/: __init__.py  dict.py  images.py  meta.py  session.py  session_file.py  session_memory.py  storage.py  user_db.py  user_file.py
beaverhabits/tests/: test_main_page.py
docker/: Dockerfile  Dockerfile.buildkit.arm32  Dockerfile.nobuildkit.arm32  fly.dockerfile
fly/: debugging.py  main.py
fly/plan/: paddle.py  plan.py
fly/routers/: paddle.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
openclaw/: SKILL.md
statics/: robots.txt  sitemap.xml  sitemap_index.xml
statics/js/: habit-color.js  habit-filter.js  habit-progress.js  habit-sort.js  habit-ui.js  settings.js  utils.js
statics/libs/: long-press-event.min.js
statics/pwa/: manifest.json  service_worker.js
tests/: conftest.py  main.py  test_api_tokens.py  test_apis.py  test_auth.py  test_fly.py  test_gui.py  test_main_page.py  test_storage.py  test_utils.py
utils/: reset_password.bat  reset_password.py
(+8 files in other folders)
