[project]
authors = [
    {name = "Henry Zhu", email = "daya0576@gmail.com"},
]
name = "beaverhabits"
dynamic = ["version"]
requires-python = "<4.0,>=3.12"
dependencies = [
    "nicegui[redis]>=3.0.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "fastapi-users[sqlalchemy]<15.0.0,>=14.0.0",
    "uvicorn[standard]>=0.28.0,<1.0.0",
    "sqlalchemy[asyncio]<3.0.0,>=2.0.29",
    "asyncpg<1.0.0,>=0.29.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pytz<2025.0,>=2024.1",
    "python-dateutil<3.0.0.0,>=2.9.0.post0",
    "loguru>=0.7.3",
    "cachetools>=5.5.1",
    "jinja2>=3.1.6",
    "dataclasses-json>=0.6.7",
    "psutil>=7.0.0",
    "uvicorn-worker>=0.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "httpx[socks]>=0.28.1",
]
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "icecream<3.0.0,>=2.1.3",
    "autopep8<3.0.0,>=2.0.4",
    "pytest-selenium<5.0.0,>=4.1.0",
    "pytest-asyncio<1.0.0.0,>=0.23.5.post1",
    "webdriver-manager<5.0.0,>=4.0.1",
    "selenium<5.0.0,>=4.18.1",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "pytest<9.0.0,>=8.1.1",
    "pip>=24.3.1",
    "psutil>=6.1.1",
    "black>=25.1.0",
    "pympler>=1.1",
]
fly = [
    "sentry-sdk[fastapi]<3.0.0,>=2.15.0",
    "paddle-python-sdk>=1.6.0",
    "highlight-io>=0.9.3",
    # "guppy3>=3.1.5",
    "memray>=1.17.2",
]

[project.scripts]
main = "beaverhabits.routes:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
